--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "sass": "^1.59.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-icons": "^3.0.0",
     "@types/react-loadable": "^5.5.6",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
