--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "cypress open"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -19,11 +20,13 @@
     "sass": "^1.59.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/react-icons": "^3.0.0",
     "@types/react-loadable": "^5.5.6",
     "@vitejs/plugin-react": "^3.1.0",
+    "cypress": "^12.8.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
